--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-junit5-mockito'
     testImplementation 'io.rest-assured:rest-assured:5.5.0'
     testImplementation 'org.assertj:assertj-core:3.26.3'
+    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.36'
 }
